use config file for manager

--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,23 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.github.ambling</groupId>
-  <artifactId>ignite-server</artifactId>
+  <artifactId>ignite-manager</artifactId>
   <version>0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <packaging>jar</packaging>
 
-  <name>ignite-server</name>
+  <name>ignite-manager</name>
   <url>http://maven.apache.org</url>
 
   <properties>
